# kmeans_project

./: .gitignore  CMakeLists.txt  Makefile  README.md  data.csv  pred.csv  run.ps1
demo/: clustering_demo.c  elbow_demo.c  kmeans_demo.c
src/: csv.c  csv.h  dbscan.c  dbscan.h  kmeans.c  kmeans.h
tools/: compare_kmeans_dbscan.py  generate_blobs.py  generate_dbscan_only.py  generate_dbscan_viz.py  plot_results.py
